# motor

./: .gitignore  CMakeLists.txt  README  README.md  motor.spec
deployment/: syntax  themes
deployment/templates/terminal program/C++/: CMakeLists.txt
src/: motorcommon.h  motormisc.h
src/executor/: motorexecutor.cc
src/project/: motorproject.cc  motorproject.h
src/ui/ncurses/: ncursesui.cc
